# PowerDNS-Admin

./: Dockerfile  Makefile  README.md  VERSION  babel.cfg  docker-compose.yml  messages.pot  package-lock.json  pyproject.toml  requirements.txt
configs/: development.py  docker_config.py
deploy/docker/: portainer.yaml
docker/: Dockerfile  entrypoint.sh
docker-test/: Dockerfile
docs/: API.md
migrations/versions/: c0b806d863ed_delete_user_col_email_otp_secret_.py
powerdnsadmin/: __init__.py  decorators.py  default_config.py  swagger-spec.yaml
powerdnsadmin/lib/: errors.py  utils.py
powerdnsadmin/models/: account.py  domain.py  domain_setting.py  history.py  record.py  setting.py  user.py
powerdnsadmin/routes/: admin.py  api.py  base.py  dashboard.py  domain.py  index.py  user.py
powerdnsadmin/services/: base.py  overload.py  saml.py  sudis.py
powerdnsadmin/static/assets/css/: ubuntu_mono.css
powerdnsadmin/static/custom/css/: custom.css
powerdnsadmin/static/custom/js/: app-authentication-settings-editor.js  custom.js
powerdnsadmin/templates/: admin_edit_account.html  admin_edit_account.html.jinja  admin_edit_key.html  admin_edit_key.html.jinja  admin_edit_user.html  admin_edit_user.html.jinja  admin_global_search.html  admin_global_search.html.jinja  admin_history.html  admin_history.html.jinja  admin_history_table.html  admin_history_table.html.jinja  admin_manage_account.html  admin_manage_account.html.jinja  admin_manage_keys.html  admin_manage_keys.html.jinja  admin_manage_user.html  admin_manage_user.html.jinja  admin_server_configuration.html  admin_server_configuration.html.jinja  admin_server_statistics.html  admin_server_statistics.html.jinja  admin_setting_authentication.html  admin_setting_authentication.html.jinja  admin_setting_basic.html  admin_setting_basic.html.jinja  admin_setting_pdns.html  admin_setting_pdns.html.jinja  admin_setting_records.html  admin_setting_records.html.jinja  applied_change_macro.html.jinja  base.html  base.html.jinja  dashboard.html  dashboard.html.jinja  dashboard_domain.html  dashboard_domain.html.jinja  docs.html  docs.html.jinja  domain.html  (+22 more)
powerdnsadmin/templates/errors/: 400.html  400.html.jinja  403.html  403.html.jinja  404.html  404.html.jinja  500.html  500.html.jinja  SAML.html  SAML.html.jinja  sudis.html.jinja
powerdnsadmin/translations/ru/LC_MESSAGES/: messages.mo  messages.po
tests/: conftest.py
