[tool.poetry]
name = "powerdns-admin"
version = "0.4.1.0"
description = "A PowerDNS web interface with advanced features"
authors = ["Nickolsky <romb.intu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "powerdns_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.1"
setuptools = "65.5.1"
authlib = "1.2.0"
flask-assets = "2.0"
flask-login = "0.6.2"
flask-mail = "0.9.1"
flask-migrate = "2.5.3"
flask-sqlalchemy = "2.5.1"
flask-sslify = "0.1.5"
flask-seasurf = "1.1.1"
flask-session = "0.4.0"
flask = "2.1.3"
jinja2 = "3.1.2"
sqlalchemy = "1.3.24"
bcrypt = "4.0.1"
bravado-core = "5.17.1"
certifi = "2022.12.7"
cffi = "1.15.1"
configobj = "5.0.8"
cryptography = "39.0.2"
cssmin = "0.2.0"
dnspython = ">=2.3.0"
flask-session-captcha = "1.3.0"
gunicorn = "20.1.0"
itsdangerous = "2.1.2"
jsonschema = {version = ">=2.5.1,<4.0.0", extras = ["format"]}
lima = "0.5"
mysqlclient = "2.0.1"
passlib = "1.7.4"
pyasn1 = "0.4.8"
pyotp = "2.8.0"
pytest = "7.2.1"
python3-saml = "1.15.0"
pytimeparse = "1.1.8"
pytz = "2022.7.1"
qrcode = "7.3.1"
requests = "2.28.2"
rjsmin = "1.2.1"
webcolors = "1.12"
werkzeug = "2.1.2"
zipp = "3.11.0"
rcssmin = "1.1.1"
zxcvbn = "4.4.28"
psycopg2 = "2.9.5"
python-dotenv = "^1.0.0"
flask-babel = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
